@@ -108,6 +108,7 @@ def self_test_suite():
         'fastexport',
         'file',
         'grafts',
+        'graph',
         'greenthreads',
         'hooks',
         'ignore',
@@ -116,7 +117,6 @@ def self_test_suite():
         'line_ending',
         'lru_cache',
         'mailmap',
-        'merge_base',
         'objects',
         'objectspec',
         'object_store',
